tests/integration/sampleSupportBundle/yamls/cluster/admissionregistration.k8s.io/v1/mutatingwebhookconfigurations.yaml
apiVersion: v1
items:
- apiVersion: admissionregistration.k8s.io/v1
  kind: MutatingWebhookConfiguration
  metadata:
    annotations:
      objectset.rio.cattle.io/applied: H4sIAAAAAAAA/4yTzW7bOhCFX+Vi1owtRblII6CLxkmKqkGQWJEXNrwYUSOLNUUKJCXDMPTuBf0H1KkbLzWDmfOdM+IGanJYoEOIN4BKaYdOaGX9p85/EXeW3MAIPeDonKSB0ENRQAzAzvb1SpG5WnRLiGHYhey/n0IVX1PihtynYwprghgqNB1ZR+ZqRXml9fKK40WztkH+5wK7to5q6BlwQ1t376Im67BuIFatlAwk5iT/6blCW0EMZXFLGOUBXtN1GF7nPMoxCu/oC90S/h9ReRcVFHD0ah+c1K1Dp43v7U1ZiGcbwKIW1gqtxtQJWk3I2N0JZtCFwKALc3IYwpwBl4KUG2lVioXH5XjfqkJ6nec0cM9pOBpnRfIu7h/GkyRLs2nyFjxl420vcKNlmKRZsqLly8PbJFtPg6cozZL7aSBHwMCS6YRPb/MRfk8MO19nU2bQoKt2h [...]
      objectset.rio.cattle.io/id: "null"
      objectset.rio.cattle.io/owner-gvk: /v1, Kind=Secret
      objectset.rio.cattle.io/owner-name: harvester-webhook-ca
      objectset.rio.cattle.io/owner-namespace: harvester-system
    creationTimestamp: "2022-03-06T22:53:25Z"
    generation: 1
    labels:
      objectset.rio.cattle.io/hash: fd7ea3b0a2e2112bc3ba319e8e7ea53ef93de0ca
    managedFields:
    - apiVersion: admissionregistration.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:objectset.rio.cattle.io/applied: {}
            f:objectset.rio.cattle.io/id: {}
            f:objectset.rio.cattle.io/owner-gvk: {}
            f:objectset.rio.cattle.io/owner-name: {}
            f:objectset.rio.cattle.io/owner-namespace: {}
          f:labels:
            .: {}
            f:objectset.rio.cattle.io/hash: {}
        f:webhooks:
          .: {}
          k:{"name":"mutator.harvesterhci.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:reinvocationPolicy: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
      manager: harvester-webhook
      operation: Update
      time: "2022-03-06T22:53:25Z"
    name: harvester-mutator
    resourceVersion: "6246"
    uid: c64395d5-c3f5-4f85-aa58-df016be0cc25
  webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJwekNDQVUyZ0F3SUJBZ0lCQURBS0JnZ3Foa2pPUFFRREFqQTdNUnd3R2dZRFZRUUtFeE5rZVc1aGJXbGoKYkdsemRHVnVaWEl0YjNKbk1Sc3dHUVlEVlFRREV4SmtlVzVoYldsamJHbHpkR1Z1WlhJdFkyRXdIaGNOTWpJdwpNekEyTWpJMU1UUTJXaGNOTXpJd016QXpNakkxTVRRMldqQTdNUnd3R2dZRFZRUUtFeE5rZVc1aGJXbGpiR2x6CmRHVnVaWEl0YjNKbk1Sc3dHUVlEVlFRREV4SmtlVzVoYldsamJHbHpkR1Z1WlhJdFkyRXdXVEFUQmdjcWhrak8KUFFJQkJnZ3Foa2pPUFFNQkJ3TkNBQVNNbVRoZGttY0JmSHFzVVFBU2Zha0xwM1F5cE93MVg3VzNvZjJJZWp2ZwpPQTJjcUZ2TktN [...]
      service:
        name: harvester-webhook
        namespace: harvester-system
        path: /v1/webhook/mutation
        port: 443
    failurePolicy: Ignore
    matchPolicy: Equivalent
    name: mutator.harvesterhci.io
    namespaceSelector: {}
    objectSelector: {}
    reinvocationPolicy: Never
    rules:
    - apiGroups:
      - "null"
      apiVersions:
      - v1
      operations:
      - CREATE
      resources:
      - pods
      scope: Namespaced
    - apiGroups:
      - harvesterhci.io
      apiVersions:
      - v1beta1
      operations:
      - CREATE
      resources:
      - virtualmachinetemplateversions
      scope: Namespaced
    - apiGroups:
      - kubevirt.io
      apiVersions:
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - virtualmachines
      scope: Namespaced
    sideEffects: None
    timeoutSeconds: 10
- apiVersion: admissionregistration.k8s.io/v1
  kind: MutatingWebhookConfiguration
  metadata:
    annotations:
      objectset.rio.cattle.io/applied: H4sIAAAAAAAA/9yWwU/bMBTG/5d3dgIZdC25TazbaRNCbDugHl7tV/JWx/Zsp4BQ/vfJTVo6oYGQsqn0VDfP/vy972dLfgB0/J18YGugBFQ1hzT2dMMheoxsTb6chJzt0aoAAUs2Ckr40kSMbG5+0LyydnluzYJvmm4+CKgposKIUD4AGmPjuhDSXzv/STIGirlnm0uMUVNS5yQrvcpuO8kArQDpab3yimsKEWsHpWm0FqBxTvpZvQpDBSW8L8Yno0JKHOHxaHy6mB/PT84mSp4Wxeh4PBmp8bvibKImaTeDNUEJdd/bxkkm/+iuFbC1WF4/PGZ2SSum2z7MVIN1YqtiThELmAmQmsnELqzkPZBfsaQ07PfebLmpdKaCwzQLuu6ycB8i1SDAYUw9Hq0dUyZ1EyL57C5bTkLGNlsVqF2Fp5sKtK2ABbJuPF1YzfIeSviErBMyjLLaf [...]
      objectset.rio.cattle.io/id: crd-webhooks
    creationTimestamp: "2022-03-06T22:48:41Z"
    generation: 8
    labels:
      objectset.rio.cattle.io/hash: 617351cca5a0574fb0b398dc41150785d72198d8
    managedFields:
    - apiVersion: admissionregistration.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:objectset.rio.cattle.io/applied: {}
            f:objectset.rio.cattle.io/id: {}
          f:labels:
            .: {}
            f:objectset.rio.cattle.io/hash: {}
        f:webhooks:
          .: {}
          k:{"name":"default.cluster.cluster.x-k8s.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:reinvocationPolicy: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
          k:{"name":"default.clusterresourceset.addons.cluster.x-k8s.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:reinvocationPolicy: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
          k:{"name":"default.exp.machinepool.cluster.x-k8s.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:reinvocationPolicy: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
          k:{"name":"default.machine.cluster.x-k8s.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:reinvocationPolicy: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
          k:{"name":"default.machinedeployment.cluster.x-k8s.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:reinvocationPolicy: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
          k:{"name":"default.machinehealthcheck.cluster.x-k8s.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:reinvocationPolicy: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
          k:{"name":"default.machineset.cluster.x-k8s.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:reinvocationPolicy: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
      manager: rancher
      operation: Update
      time: "2022-03-06T22:49:33Z"
    name: mutating-webhook-configuration
    resourceVersion: "2092"
    uid: d8117d9e-d788-4d9f-a167-708029d20868
  webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQ2RENDQXRDZ0F3SUJBZ0lCQWpBTkJna3Foa2lHOXcwQkFRc0ZBREE2TVRnd05nWURWUVFEREM5allYUjAKYkdVdGMzbHpkR1Z0TFhKaGJtTm9aWEl0ZDJWaWFHOXZheTEwYkhNdFkyRkFNVFkwTmpZd05qazNNVEFlRncweQpNakF6TURZeU1UUTVNekJhRncweU16QXpNRFl5TVRRNU16QmFNRGN4TlRBekJnTlZCQU1NTEdOaGRIUnNaUzF6CmVYTjBaVzB0Y21GdVkyaGxjaTEzWldKb2IyOXJMWFJzYzBBeE5qUTJOakEyT1RjeU1JSUJJakFOQmdrcWhraUcKOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXM1b2tjbVgyNVZ6T1RpSUR2d0l3QXhXQVI1ajI1WHBGZEZ1NwpuV2sxSVdpeXJu [...]
      service:
        name: webhook-service
        namespace: cattle-system
        path: /mutate-cluster-x-k8s-io-v1alpha4-cluster
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: default.cluster.cluster.x-k8s.io
    namespaceSelector: {}
    objectSelector: {}
    reinvocationPolicy: Never
    rules:
    - apiGroups:
      - cluster.x-k8s.io
      apiVersions:
      - v1alpha4
      operations:
      - CREATE
      - UPDATE
      resources:
      - clusters
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQ2RENDQXRDZ0F3SUJBZ0lCQWpBTkJna3Foa2lHOXcwQkFRc0ZBREE2TVRnd05nWURWUVFEREM5allYUjAKYkdVdGMzbHpkR1Z0TFhKaGJtTm9aWEl0ZDJWaWFHOXZheTEwYkhNdFkyRkFNVFkwTmpZd05qazNNVEFlRncweQpNakF6TURZeU1UUTVNekJhRncweU16QXpNRFl5TVRRNU16QmFNRGN4TlRBekJnTlZCQU1NTEdOaGRIUnNaUzF6CmVYTjBaVzB0Y21GdVkyaGxjaTEzWldKb2IyOXJMWFJzYzBBeE5qUTJOakEyT1RjeU1JSUJJakFOQmdrcWhraUcKOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXM1b2tjbVgyNVZ6T1RpSUR2d0l3QXhXQVI1ajI1WHBGZEZ1NwpuV2sxSVdpeXJu [...]
      service:
        name: webhook-service
        namespace: cattle-system
        path: /mutate-cluster-x-k8s-io-v1alpha4-machine
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: default.machine.cluster.x-k8s.io
    namespaceSelector: {}
    objectSelector: {}
    reinvocationPolicy: Never
    rules:
    - apiGroups:
      - cluster.x-k8s.io
      apiVersions:
      - v1alpha4
      operations:
      - CREATE
      - UPDATE
      resources:
      - machines
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQ2RENDQXRDZ0F3SUJBZ0lCQWpBTkJna3Foa2lHOXcwQkFRc0ZBREE2TVRnd05nWURWUVFEREM5allYUjAKYkdVdGMzbHpkR1Z0TFhKaGJtTm9aWEl0ZDJWaWFHOXZheTEwYkhNdFkyRkFNVFkwTmpZd05qazNNVEFlRncweQpNakF6TURZeU1UUTVNekJhRncweU16QXpNRFl5TVRRNU16QmFNRGN4TlRBekJnTlZCQU1NTEdOaGRIUnNaUzF6CmVYTjBaVzB0Y21GdVkyaGxjaTEzWldKb2IyOXJMWFJzYzBBeE5qUTJOakEyT1RjeU1JSUJJakFOQmdrcWhraUcKOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXM1b2tjbVgyNVZ6T1RpSUR2d0l3QXhXQVI1ajI1WHBGZEZ1NwpuV2sxSVdpeXJu [...]
      service:
        name: webhook-service
        namespace: cattle-system
        path: /mutate-cluster-x-k8s-io-v1alpha4-machinedeployment
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: default.machinedeployment.cluster.x-k8s.io
    namespaceSelector: {}
    objectSelector: {}
    reinvocationPolicy: Never
    rules:
    - apiGroups:
      - cluster.x-k8s.io
      apiVersions:
      - v1alpha4
      operations:
      - CREATE
      - UPDATE
      resources:
      - machinedeployments
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQ2RENDQXRDZ0F3SUJBZ0lCQWpBTkJna3Foa2lHOXcwQkFRc0ZBREE2TVRnd05nWURWUVFEREM5allYUjAKYkdVdGMzbHpkR1Z0TFhKaGJtTm9aWEl0ZDJWaWFHOXZheTEwYkhNdFkyRkFNVFkwTmpZd05qazNNVEFlRncweQpNakF6TURZeU1UUTVNekJhRncweU16QXpNRFl5TVRRNU16QmFNRGN4TlRBekJnTlZCQU1NTEdOaGRIUnNaUzF6CmVYTjBaVzB0Y21GdVkyaGxjaTEzWldKb2IyOXJMWFJzYzBBeE5qUTJOakEyT1RjeU1JSUJJakFOQmdrcWhraUcKOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXM1b2tjbVgyNVZ6T1RpSUR2d0l3QXhXQVI1ajI1WHBGZEZ1NwpuV2sxSVdpeXJu [...]
      service:
        name: webhook-service
        namespace: cattle-system
        path: /mutate-cluster-x-k8s-io-v1alpha4-machinehealthcheck
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: default.machinehealthcheck.cluster.x-k8s.io
    namespaceSelector: {}
    objectSelector: {}
    reinvocationPolicy: Never
    rules:
    - apiGroups:
      - cluster.x-k8s.io
      apiVersions:
      - v1alpha4
      operations:
      - CREATE
      - UPDATE
      resources:
      - machinehealthchecks
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQ2RENDQXRDZ0F3SUJBZ0lCQWpBTkJna3Foa2lHOXcwQkFRc0ZBREE2TVRnd05nWURWUVFEREM5allYUjAKYkdVdGMzbHpkR1Z0TFhKaGJtTm9aWEl0ZDJWaWFHOXZheTEwYkhNdFkyRkFNVFkwTmpZd05qazNNVEFlRncweQpNakF6TURZeU1UUTVNekJhRncweU16QXpNRFl5TVRRNU16QmFNRGN4TlRBekJnTlZCQU1NTEdOaGRIUnNaUzF6CmVYTjBaVzB0Y21GdVkyaGxjaTEzWldKb2IyOXJMWFJzYzBBeE5qUTJOakEyT1RjeU1JSUJJakFOQmdrcWhraUcKOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXM1b2tjbVgyNVZ6T1RpSUR2d0l3QXhXQVI1ajI1WHBGZEZ1NwpuV2sxSVdpeXJu [...]
      service:
        name: webhook-service
        namespace: cattle-system
        path: /mutate-cluster-x-k8s-io-v1alpha4-machineset
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: default.machineset.cluster.x-k8s.io
    namespaceSelector: {}
    objectSelector: {}
    reinvocationPolicy: Never
    rules:
    - apiGroups:
      - cluster.x-k8s.io
      apiVersions:
      - v1alpha4
      operations:
      - CREATE
      - UPDATE
      resources:
      - machinesets
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQ2RENDQXRDZ0F3SUJBZ0lCQWpBTkJna3Foa2lHOXcwQkFRc0ZBREE2TVRnd05nWURWUVFEREM5allYUjAKYkdVdGMzbHpkR1Z0TFhKaGJtTm9aWEl0ZDJWaWFHOXZheTEwYkhNdFkyRkFNVFkwTmpZd05qazNNVEFlRncweQpNakF6TURZeU1UUTVNekJhRncweU16QXpNRFl5TVRRNU16QmFNRGN4TlRBekJnTlZCQU1NTEdOaGRIUnNaUzF6CmVYTjBaVzB0Y21GdVkyaGxjaTEzWldKb2IyOXJMWFJzYzBBeE5qUTJOakEyT1RjeU1JSUJJakFOQmdrcWhraUcKOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXM1b2tjbVgyNVZ6T1RpSUR2d0l3QXhXQVI1ajI1WHBGZEZ1NwpuV2sxSVdpeXJu [...]
      service:
        name: webhook-service
        namespace: cattle-system
        path: /mutate-exp-cluster-x-k8s-io-v1alpha4-machinepool
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: default.exp.machinepool.cluster.x-k8s.io
    namespaceSelector: {}
    objectSelector: {}
    reinvocationPolicy: Never
    rules:
    - apiGroups:
      - exp.cluster.x-k8s.io
      apiVersions:
      - v1alpha4
      operations:
      - CREATE
      - UPDATE
      resources:
      - machinepools
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUQ2RENDQXRDZ0F3SUJBZ0lCQWpBTkJna3Foa2lHOXcwQkFRc0ZBREE2TVRnd05nWURWUVFEREM5allYUjAKYkdVdGMzbHpkR1Z0TFhKaGJtTm9aWEl0ZDJWaWFHOXZheTEwYkhNdFkyRkFNVFkwTmpZd05qazNNVEFlRncweQpNakF6TURZeU1UUTVNekJhRncweU16QXpNRFl5TVRRNU16QmFNRGN4TlRBekJnTlZCQU1NTEdOaGRIUnNaUzF6CmVYTjBaVzB0Y21GdVkyaGxjaTEzWldKb2IyOXJMWFJzYzBBeE5qUTJOakEyT1RjeU1JSUJJakFOQmdrcWhraUcKOXcwQkFRRUZBQU9DQVE4QU1JSUJDZ0tDQVFFQXM1b2tjbVgyNVZ6T1RpSUR2d0l3QXhXQVI1ajI1WHBGZEZ1NwpuV2sxSVdpeXJu [...]
      service:
        name: webhook-service
        namespace: cattle-system
        path: /mutate-addons-cluster-x-k8s-io-v1alpha4-clusterresourceset
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: default.clusterresourceset.addons.cluster.x-k8s.io
    namespaceSelector: {}
    objectSelector: {}
    reinvocationPolicy: Never
    rules:
    - apiGroups:
      - addons.cluster.x-k8s.io
      apiVersions:
      - v1alpha4
      operations:
      - CREATE
      - UPDATE
      resources:
      - clusterresourcesets
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
- apiVersion: admissionregistration.k8s.io/v1
  kind: MutatingWebhookConfiguration
  metadata:
    annotations:
      meta.helm.sh/release-name: rancher-monitoring
      meta.helm.sh/release-namespace: cattle-monitoring-system
      objectset.rio.cattle.io/id: default-mcc-rancher-monitoring-cattle-fleet-local-system
    creationTimestamp: "2022-03-06T22:52:06Z"
    generation: 178
    labels:
      app: rancher-monitoring-admission
      app.kubernetes.io/instance: rancher-monitoring
      app.kubernetes.io/managed-by: Helm
      app.kubernetes.io/part-of: rancher-monitoring
      app.kubernetes.io/version: 100.1.0_up19.0.3
      chart: rancher-monitoring-100.1.0_up19.0.3
      heritage: Helm
      objectset.rio.cattle.io/hash: a8c87f2d01731fdad3b988f675a7c8a7da10d382
      release: rancher-monitoring
    managedFields:
    - apiVersion: admissionregistration.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:meta.helm.sh/release-name: {}
            f:meta.helm.sh/release-namespace: {}
            f:objectset.rio.cattle.io/id: {}
          f:labels:
            .: {}
            f:app: {}
            f:app.kubernetes.io/instance: {}
            f:app.kubernetes.io/managed-by: {}
            f:app.kubernetes.io/part-of: {}
            f:app.kubernetes.io/version: {}
            f:chart: {}
            f:heritage: {}
            f:objectset.rio.cattle.io/hash: {}
            f:release: {}
        f:webhooks:
          .: {}
          k:{"name":"prometheusrulemutate.monitoring.coreos.com"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:reinvocationPolicy: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
      manager: fleetagent
      operation: Update
      time: "2022-03-22T18:56:23Z"
    - apiVersion: admissionregistration.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:webhooks:
          k:{"name":"prometheusrulemutate.monitoring.coreos.com"}:
            f:clientConfig:
              f:caBundle: {}
            f:failurePolicy: {}
      manager: kube-webhook-certgen
      operation: Update
      time: "2022-03-22T18:56:48Z"
    name: rancher-monitoring-admission
    resourceVersion: "14474075"
    uid: c21c6f1b-c618-4b6e-b1a1-e1850255e840
  webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJkakNDQVJ1Z0F3SUJBZ0lRQVJwd2FyYS8xNmZPQUNMV2NVSjhKVEFLQmdncWhrak9QUVFEQWpBUE1RMHcKQ3dZRFZRUUtFd1J1YVd3eE1DQVhEVEl5TURNd05qSXlORFkxTkZvWUR6SXhNakl3TWpFd01qSTBOalUwV2pBUApNUTB3Q3dZRFZRUUtFd1J1YVd3eE1Ga3dFd1lIS29aSXpqMENBUVlJS29aSXpqMERBUWNEUWdBRXltRHlLWEliCkxkR2toUzVZT0wvblJ1ZjNHUTBtSG9hWEVPVXU2eHNvbFhxVmN3c05BS0lUTWVDS2JGTTFLeWdqMkJTSVBZZXgKL2greEFoUWhBMU9ZUjZOWE1GVXdEZ1lEVlIwUEFRSC9CQVFEQWdJRU1CTUdBMVVkSlFRTU1Bb0dDQ3NHQVFVRgpCd01CTUE4R0Ex [...]
      service:
        name: rancher-monitoring-operator
        namespace: cattle-monitoring-system
        path: /admission-prometheusrules/mutate
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: prometheusrulemutate.monitoring.coreos.com
    namespaceSelector: {}
    objectSelector: {}
    reinvocationPolicy: Never
    rules:
    - apiGroups:
      - monitoring.coreos.com
      apiVersions:
      - '*'
      operations:
      - CREATE
      - UPDATE
      resources:
      - prometheusrules
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
- apiVersion: admissionregistration.k8s.io/v1
  kind: MutatingWebhookConfiguration
  metadata:
    annotations:
      objectset.rio.cattle.io/applied: H4sIAAAAAAAA/+yUTW+bTBDHv8qjOW9ieLDVBKmHhiSVaJQ2EHJIlMOwDPbWyy7aXbAsi+9eLTiqEzUvUq89MrPz8v//RuygIYcVOoR4B6iUduiEVtZ/6vIncWfJHRuhjzk6J+lY6JmoIAZgr+b1RpE5WvZriGHWh+y/b0JVn3Pihty7ZQobghim8NGGypXW6yOOHyq0LfKDaru1jhoYGHBDo65b0ZB12LQQq05KBhJLkm+qXaFdQQwBcVwgDxYndUn1pzoqTyOksj6N8GQe4nzxf3S6KBe1n7bXYFDxFZnfvXxur8hC/LADrBphrdAqo17Q5o6Mncx/gD4EBn1YksMQHhlwKUi5RKtaLP26HM86VUk/5yoP3FUeJllRpbfi7Dy7S4u8uE9vgssiG3OBS9ZhmhfphtbX5zd3xfY+uIzyIj27D2QCDCyZXnjrdi+WfyIAk6o/G8ygR [...]
      objectset.rio.cattle.io/id: "null"
      objectset.rio.cattle.io/owner-gvk: /v1, Kind=Secret
      objectset.rio.cattle.io/owner-name: cattle-webhook-ca
      objectset.rio.cattle.io/owner-namespace: cattle-system
    creationTimestamp: "2022-03-06T22:49:50Z"
    generation: 1
    labels:
      objectset.rio.cattle.io/hash: 0eca5ac058fbef7f3b93aebf93a841a452395b5f
    managedFields:
    - apiVersion: admissionregistration.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:objectset.rio.cattle.io/applied: {}
            f:objectset.rio.cattle.io/id: {}
            f:objectset.rio.cattle.io/owner-gvk: {}
            f:objectset.rio.cattle.io/owner-name: {}
            f:objectset.rio.cattle.io/owner-namespace: {}
          f:labels:
            .: {}
            f:objectset.rio.cattle.io/hash: {}
        f:webhooks:
          .: {}
          k:{"name":"rancher.cattle.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:reinvocationPolicy: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
          k:{"name":"rancherfleet.cattle.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:reinvocationPolicy: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
      manager: webhook
      operation: Update
      time: "2022-03-06T22:49:50Z"
    name: rancher.cattle.io
    resourceVersion: "2432"
    uid: 826a7039-6655-4f21-a39a-99846ecf32bb
  webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJwekNDQVUyZ0F3SUJBZ0lCQURBS0JnZ3Foa2pPUFFRREFqQTdNUnd3R2dZRFZRUUtFeE5rZVc1aGJXbGoKYkdsemRHVnVaWEl0YjNKbk1Sc3dHUVlEVlFRREV4SmtlVzVoYldsamJHbHpkR1Z1WlhJdFkyRXdIaGNOTWpJdwpNekEyTWpJME9UTTBXaGNOTXpJd016QXpNakkwT1RNMFdqQTdNUnd3R2dZRFZRUUtFeE5rZVc1aGJXbGpiR2x6CmRHVnVaWEl0YjNKbk1Sc3dHUVlEVlFRREV4SmtlVzVoYldsamJHbHpkR1Z1WlhJdFkyRXdXVEFUQmdjcWhrak8KUFFJQkJnZ3Foa2pPUFFNQkJ3TkNBQVJvZ3ZyTnpGMzZBZlVDSlZjb1BoOEhmVVFrWGRRRldkMTlodkpTa1Z5Sgp4NnE0aWpkckhO [...]
      service:
        name: rancher-webhook
        namespace: cattle-system
        path: /v1/webhook/mutation
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: rancherfleet.cattle.io
    namespaceSelector: {}
    objectSelector: {}
    reinvocationPolicy: Never
    rules:
    - apiGroups:
      - management.cattle.io
      apiVersions:
      - v3
      operations:
      - CREATE
      resources:
      - fleetworkspaces
      scope: Cluster
    sideEffects: NoneOnDryRun
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUJwekNDQVUyZ0F3SUJBZ0lCQURBS0JnZ3Foa2pPUFFRREFqQTdNUnd3R2dZRFZRUUtFeE5rZVc1aGJXbGoKYkdsemRHVnVaWEl0YjNKbk1Sc3dHUVlEVlFRREV4SmtlVzVoYldsamJHbHpkR1Z1WlhJdFkyRXdIaGNOTWpJdwpNekEyTWpJME9UTTBXaGNOTXpJd016QXpNakkwT1RNMFdqQTdNUnd3R2dZRFZRUUtFeE5rZVc1aGJXbGpiR2x6CmRHVnVaWEl0YjNKbk1Sc3dHUVlEVlFRREV4SmtlVzVoYldsamJHbHpkR1Z1WlhJdFkyRXdXVEFUQmdjcWhrak8KUFFJQkJnZ3Foa2pPUFFNQkJ3TkNBQVJvZ3ZyTnpGMzZBZlVDSlZjb1BoOEhmVVFrWGRRRldkMTlodkpTa1Z5Sgp4NnE0aWpkckhO [...]
      service:
        name: rancher-webhook
        namespace: cattle-system
        path: /v1/webhook/mutation
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: rancher.cattle.io
    namespaceSelector: {}
    objectSelector: {}
    reinvocationPolicy: Never
    rules:
    - apiGroups:
      - provisioning.cattle.io
      apiVersions:
      - v1
      operations:
      - CREATE
      resources:
      - clusters
      scope: Namespaced
    - apiGroups:
      - "null"
      apiVersions:
      - v1
      operations:
      - CREATE
      resources:
      - secrets
      scope: Namespaced
    sideEffects: NoneOnDryRun
    timeoutSeconds: 10
- apiVersion: admissionregistration.k8s.io/v1
  kind: MutatingWebhookConfiguration
  metadata:
    annotations:
      certificates.kubevirt.io/secret: kubevirt-virt-api-certs
      kubevirt.io/customizer-identifier: 0564c24f745ced6f94bf8fe15c474566be27acf3
      kubevirt.io/generation: "2"
      kubevirt.io/install-strategy-identifier: d3df7f87ee723ed71ca49f6c5cab7566dd4dc500
      kubevirt.io/install-strategy-registry: registry.suse.com/suse/sles/15.3
      kubevirt.io/install-strategy-version: 0.45.0-8.4.3
    creationTimestamp: "2022-03-06T22:52:52Z"
    generation: 5
    labels:
      app.kubernetes.io/component: kubevirt
      app.kubernetes.io/managed-by: kubevirt-operator
      kubevirt.io: virt-api-mutator
    managedFields:
    - apiVersion: admissionregistration.k8s.io/v1
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:certificates.kubevirt.io/secret: {}
            f:kubevirt.io/customizer-identifier: {}
            f:kubevirt.io/generation: {}
            f:kubevirt.io/install-strategy-identifier: {}
            f:kubevirt.io/install-strategy-registry: {}
            f:kubevirt.io/install-strategy-version: {}
          f:labels:
            .: {}
            f:app.kubernetes.io/component: {}
            f:app.kubernetes.io/managed-by: {}
            f:kubevirt.io: {}
        f:webhooks:
          .: {}
          k:{"name":"migrations-mutator.kubevirt.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:reinvocationPolicy: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
          k:{"name":"virtualmachineinstances-mutator.kubevirt.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:reinvocationPolicy: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
          k:{"name":"virtualmachines-mutator.kubevirt.io"}:
            .: {}
            f:admissionReviewVersions: {}
            f:clientConfig:
              .: {}
              f:caBundle: {}
              f:service:
                .: {}
                f:name: {}
                f:namespace: {}
                f:path: {}
                f:port: {}
            f:failurePolicy: {}
            f:matchPolicy: {}
            f:name: {}
            f:namespaceSelector: {}
            f:objectSelector: {}
            f:reinvocationPolicy: {}
            f:rules: {}
            f:sideEffects: {}
            f:timeoutSeconds: {}
      manager: virt-operator
      operation: Update
      time: "2022-03-06T22:52:52Z"
    name: virt-api-mutator
    resourceVersion: "11716329"
    uid: d6b43594-54cc-4c5f-9934-be4a0b9d09ed
  webhooks:
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM2VENDQWRHZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFXTVJRd0VnWURWUVFERXd0cmRXSmwKZG1seWRDNXBiekFlRncweU1qQXpNVGd3TXpRd05UWmFGdzB5TWpBek1qVXdNelF3TlRaYU1CWXhGREFTQmdOVgpCQU1UQzJ0MVltVjJhWEowTG1sdk1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBCnJ5WStzaW43bkdpKzdqVk1tQWkyNGh1enZPL0N4NGNjTmxxb2JCcENiVVZPSTlKMkFjdlhJT3d4bHVacVRXdEEKc0tyT0UyemtlV3c5TXQxSGVXT1QyVGNxU0dBVVU4ajNSZ1pFQUk1aHVrRUxQNGR3Z2hPejZCUVljK01xSVlTNwpaSFhMeGI5eVRu [...]
      service:
        name: virt-api
        namespace: harvester-system
        path: /virtualmachines-mutate
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: virtualmachines-mutator.kubevirt.io
    namespaceSelector: {}
    objectSelector: {}
    reinvocationPolicy: Never
    rules:
    - apiGroups:
      - kubevirt.io
      apiVersions:
      - v1alpha3
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - virtualmachines
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM2VENDQWRHZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFXTVJRd0VnWURWUVFERXd0cmRXSmwKZG1seWRDNXBiekFlRncweU1qQXpNVGd3TXpRd05UWmFGdzB5TWpBek1qVXdNelF3TlRaYU1CWXhGREFTQmdOVgpCQU1UQzJ0MVltVjJhWEowTG1sdk1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBCnJ5WStzaW43bkdpKzdqVk1tQWkyNGh1enZPL0N4NGNjTmxxb2JCcENiVVZPSTlKMkFjdlhJT3d4bHVacVRXdEEKc0tyT0UyemtlV3c5TXQxSGVXT1QyVGNxU0dBVVU4ajNSZ1pFQUk1aHVrRUxQNGR3Z2hPejZCUVljK01xSVlTNwpaSFhMeGI5eVRu [...]
      service:
        name: virt-api
        namespace: harvester-system
        path: /virtualmachineinstances-mutate
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: virtualmachineinstances-mutator.kubevirt.io
    namespaceSelector: {}
    objectSelector: {}
    reinvocationPolicy: Never
    rules:
    - apiGroups:
      - kubevirt.io
      apiVersions:
      - v1alpha3
      - v1
      operations:
      - CREATE
      - UPDATE
      resources:
      - virtualmachineinstances
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
  - admissionReviewVersions:
    - v1
    - v1beta1
    clientConfig:
      caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSUM2VENDQWRHZ0F3SUJBZ0lCQURBTkJna3Foa2lHOXcwQkFRc0ZBREFXTVJRd0VnWURWUVFERXd0cmRXSmwKZG1seWRDNXBiekFlRncweU1qQXpNVGd3TXpRd05UWmFGdzB5TWpBek1qVXdNelF3TlRaYU1CWXhGREFTQmdOVgpCQU1UQzJ0MVltVjJhWEowTG1sdk1JSUJJakFOQmdrcWhraUc5dzBCQVFFRkFBT0NBUThBTUlJQkNnS0NBUUVBCnJ5WStzaW43bkdpKzdqVk1tQWkyNGh1enZPL0N4NGNjTmxxb2JCcENiVVZPSTlKMkFjdlhJT3d4bHVacVRXdEEKc0tyT0UyemtlV3c5TXQxSGVXT1QyVGNxU0dBVVU4ajNSZ1pFQUk1aHVrRUxQNGR3Z2hPejZCUVljK01xSVlTNwpaSFhMeGI5eVRu [...]
      service:
        name: virt-api
        namespace: harvester-system
        path: /migration-mutate-create
        port: 443
    failurePolicy: Fail
    matchPolicy: Equivalent
    name: migrations-mutator.kubevirt.io
    namespaceSelector: {}
    objectSelector: {}
    reinvocationPolicy: Never
    rules:
    - apiGroups:
      - kubevirt.io
      apiVersions:
      - v1alpha3
      - v1
      operations:
      - CREATE
      resources:
      - virtualmachineinstancemigrations
      scope: '*'
    sideEffects: None
    timeoutSeconds: 10
kind: List
metadata:
  resourceVersion: "14658871"
